--- a/Ansible/master/Roles/ansible.cfg
+++ b/Ansible/master/Roles/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./inventory
-remote_user = ahmed
+remote_user = ubuntu
 ask_pass = false
 become_user=root
 ask_become_pass = false
