--- a/Ansible/master/Roles/playbook.yml
+++ b/Ansible/master/Roles/playbook.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install and Configure PostgreSQL for SonarQube and install Gradle 
+- name: Install and Configure Jenkins
   hosts: master
   become: yes
   become_method: sudo  
