--- a/Ansible/slave/Roles/Docker/tasks/main.yaml
+++ b/Ansible/slave/Roles/Docker/tasks/main.yaml
@@ -1,25 +1,36 @@
 ---
-- name: Install prerequisite packages
-  apt:
-    name: "{{ item }}"
-    state: present
-    update_cache: yes
-  loop: "{{ prerequisite_packages }}"
-
-- name: Add Docker GPG key
-  apt_key:
-    url: "{{ docker_gpg_key_url }}"
-    state: present
-
-- name: Add Docker repository
-  apt_repository:
-    repo: "deb [arch=amd64] {{ docker_apt_url }} {{ ansible_distribution_release }} stable"
-    state: present
-
-- name: Install Docker
-  apt:
-    name: "{{ docker_package_name }}"
-    state: present
-    update_cache: yes
-  notify:
-    - Start and enable Docker service
+  - name: Install prerequisite packages
+    apt:
+      name: "{{ item }}"
+      state: present
+      update_cache: yes
+    loop: "{{ prerequisite_packages }}"
+  
+  - name: Add Docker GPG key
+    apt_key:
+      url: "{{ docker_gpg_key_url }}"
+      state: present
+  
+  - name: Add Docker repository
+    apt_repository:
+      repo: "deb [arch=amd64] {{ docker_apt_url }} {{ ansible_distribution_release }} stable"
+      state: present
+  
+  - name: Install Docker
+    apt:
+      name: "{{ docker_package_name }}"
+      state: present
+      update_cache: yes
+    notify:
+      - Start and enable Docker service
+  
+  - name: Add user to the Docker group
+    user:
+      name: "{{ ansible_user }}"
+      groups: docker
+      append: yes
+  
+  - name: Apply group changes (re-login required)
+    command: newgrp docker
+    when: ansible_user == lookup('env', 'USER')
+  
