--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         DOCKER_IMAGE_NAME = 'ivolve'
         DOCKER_HUB_REPO = 'ahmedmahmood44'
         DOCKER_HUB_CREDENTIALS = credentials('Docker')
-        NAMESPACE='default'
+        NAMESPACE='ivolve'
     }
          
     stages {
