--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -53,7 +53,7 @@ pipeline {
         stage('Deploy to Kubernetes') {
             steps {
                 script {
-                    dir ('FinalProjectCode')
+                    dir ('./FinalProjectCode')
                     deployToKubernetes(NAMESPACE)
                 }
             }
