--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -55,8 +55,10 @@ pipeline {
 
         stage('Deploy to Kubernetes') {
             steps {
-                    dir('FinalProjectCode')
+                    dir('FinalProjectCode'){
+               
                     deployToKubernetes(NAMESPACE)
+               }        
             }
         }
         
